[package]
name = "mishmesh-escrow"
version = "0.1.0"
description = "MishMesh orb escrow program — SOL, SPL token, and NFT drops on Solana"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
path = "src/lib.rs"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.30.1"
anchor-spl = "0.30.1"
